<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Mainlogin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="61dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:fontFamily="sans-serif-black"
            android:text="Registro"
            android:textAlignment="center"
            android:textSize="70sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:backgroundTint="@color/ColorPrimary"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <EditText
            android:id="@+id/EmailR"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:backgroundTint="@color/ColorPrimary"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <EditText
            android:id="@+id/PassR"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:backgroundTint="@color/ColorPrimary"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/carga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/Register"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/ColorPrimary"
            android:text="Registrar"
            app:cornerRadius="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="138dp" />

        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Volver"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>